# rbac2fast-core

./: MANIFEST.in  README.md  pyproject.toml
src/rbac2fast_core/: __init__.py
src/rbac2fast_core/protocols/: __init__.py  models.py  services.py
src/rbac2fast_core/schemas/: __init__.py  permission_category_schema.py  permission_schema.py  role_schema.py  route_schema.py
