[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbac2fast-core"
version = "0.1.0"
description = "Core design package for RBAC: protocols and pydantic schemas"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Angel Daniel Sanchez Castillo", email = "angeldaniel.sanchezcastillo@gmail.com"}
]
keywords = ["permissions", "rbac", "authorization", "access control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
    "build",
    "twine",
]
test = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/AngelDanielSanchezCastillo/rbac2fast-core"
Repository = "https://github.com/AngelDanielSanchezCastillo/rbac2fast-core"
Issues = "https://github.com/AngelDanielSanchezCastillo/rbac2fast-core/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rbac2fast_core*"]